utils: add tests str_to_eq & eq_to_str

--- a/meson.build
+++ b/meson.build
@@ -46,3 +46,5 @@ src = files(
 cc = meson.get_compiler('c')
 x11 = dependency('x11', required: false, disabler: true)
 x11_test = dependency('xtst', required: false, disabler: true)
+
+subdir('tests')
