interface start: set grid properties

--- a/meson.build
+++ b/meson.build
@@ -43,6 +43,7 @@ src = files(
   'src/equation.c',
   'src/check_equality.c',
   'src/nerdle.c',
+  'src/interface.c',
 )
 
 cc = meson.get_compiler('c')
